--- a/x11-fonts/dejavu/Makefile
+++ b/x11-fonts/dejavu/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	dejavu
 PORTVERSION=	2.37
+PORTREVISION=	1
 DISTVERSIONPREFIX=	fonts-ttf-
 CATEGORIES=	x11-fonts
 MASTER_SITES=	SF
@@ -16,6 +17,9 @@ LICENSE_NAME_AMS=	AMSFonts Copyright version 2.2
 LICENSE_NAME_AREV=	Arev Fonts Copyright
 LICENSE_NAME_BITSTREAM=	Bitstream Vera Fonts Copyright
 LICENSE_FILE=	${WRKSRC}/LICENSE
+LICENSE_FILE_AMS=	${WRKSRC}/LICENSE
+LICENSE_FILE_AREV=	${WRKSRC}/LICENSE
+LICENSE_FILE_BITSTREAM=	${WRKSRC}/LICENSE
 LICENSE_PERMS_AMS=	${_LICENSE_PERMS_DEFAULT}
 LICENSE_PERMS_AREV=	${_LICENSE_PERMS_DEFAULT}
 LICENSE_PERMS_BITSTREAM=${_LICENSE_PERMS_DEFAULT}
