hardcode qt5-network portversion

--- a/net/qt5-network/Makefile
+++ b/net/qt5-network/Makefile
@@ -1,7 +1,7 @@
 # $FreeBSD$
 
 PORTNAME=	network
-DISTVERSION=	${QT5_VERSION}
+DISTVERSION=	5.10.1
 PORTREVISION=	1
 CATEGORIES=	net ipv6
 PKGNAMEPREFIX=	qt5-
